// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FaceTiles > renders default as expected 1`] = `
<div>
  <div
    class="face-tiles flex items-center "
  >
    <div
      class="face-tiles__container flex -space-x-3"
    >
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 1"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar1.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 2"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar2.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 3"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar3.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 4"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar4.jpg"
        />
      </div>
      <div
        class="face-tiles__counter flex items-center justify-center bg-bluedot-lighter text-bluedot-normal font-semibold text-sm border border-bluedot-normal w-[66px] h-8 rounded-2xl px-2 py-4"
      >
        +
        4071
      </div>
    </div>
  </div>
</div>
`;

exports[`FaceTiles > renders empty state 1`] = `
<div>
  <div
    class="face-tiles flex items-center "
  >
    <div
      class="face-tiles__container flex -space-x-3"
    >
      <div
        class="face-tiles__counter flex items-center justify-center bg-bluedot-lighter text-bluedot-normal font-semibold text-sm border border-bluedot-normal w-[66px] h-8 rounded-2xl px-2 py-4"
      >
        +
        4071
      </div>
    </div>
  </div>
</div>
`;

exports[`FaceTiles > renders with custom className 1`] = `
<div>
  <div
    class="face-tiles flex items-center custom-class"
  >
    <div
      class="face-tiles__container flex -space-x-3"
    >
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 1"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar1.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 2"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar2.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 3"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar3.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 4"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar4.jpg"
        />
      </div>
      <div
        class="face-tiles__counter flex items-center justify-center bg-bluedot-lighter text-bluedot-normal font-semibold text-sm border border-bluedot-normal w-[66px] h-8 rounded-2xl px-2 py-4"
      >
        +
        4071
      </div>
    </div>
  </div>
</div>
`;

exports[`FaceTiles > renders with custom maxDisplay 1`] = `
<div>
  <div
    class="face-tiles flex items-center "
  >
    <div
      class="face-tiles__container flex -space-x-3"
    >
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 1"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar1.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 2"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar2.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 32px; height: 32px;"
      >
        <img
          alt="User 3"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar3.jpg"
        />
      </div>
      <div
        class="face-tiles__counter flex items-center justify-center bg-bluedot-lighter text-bluedot-normal font-semibold text-sm border border-bluedot-normal w-[66px] h-8 rounded-2xl px-2 py-4"
      >
        +
        4071
      </div>
    </div>
  </div>
</div>
`;

exports[`FaceTiles > renders with custom size 1`] = `
<div>
  <div
    class="face-tiles flex items-center "
  >
    <div
      class="face-tiles__container flex -space-x-3"
    >
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 48px; height: 48px;"
      >
        <img
          alt="User 1"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar1.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 48px; height: 48px;"
      >
        <img
          alt="User 2"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar2.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 48px; height: 48px;"
      >
        <img
          alt="User 3"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar3.jpg"
        />
      </div>
      <div
        class="face-tiles__avatar rounded-full border border-white overflow-hidden"
        style="width: 48px; height: 48px;"
      >
        <img
          alt="User 4"
          class="face-tiles__avatar-img size-full object-cover"
          src="/avatar4.jpg"
        />
      </div>
      <div
        class="face-tiles__counter flex items-center justify-center bg-bluedot-lighter text-bluedot-normal font-semibold text-sm border border-bluedot-normal w-[66px] h-8 rounded-2xl px-2 py-4"
      >
        +
        4071
      </div>
    </div>
  </div>
</div>
`;
